[tool.poetry]
name = "canvasandvcs"
version = "0.1.0"
description = ""
authors = ["Clearly-Josh <joshua.clark@goswedes.org>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
